# echolens

./: .gitignore  CMakeLists.txt  README.md
recorder/: CMakeLists.txt
recorder/assets/: echolens.desktop
recorder/include/: recorder.h
recorder/src/: main.c
src/: recorder.c
transcriber/: requirements.txt  transcriber.py  transcriber_app.spec  transcript.txt
